<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Domain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminApprove">

    <Button
        android:id="@+id/PostDetalisbtn"
        android:layout_width="155dp"
        android:layout_height="57dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/submitbutton"
        android:text="@string/post_detalis"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BusinessDetalisbtn"
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/submitbutton"
        android:text="@string/business_detalis"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PostDetalisbtn" />

    <Button
        android:id="@+id/ApprovePost"
        android:layout_width="122dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/submitbutton"
        android:text="@string/approve_btn"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BusinessDetalisbtn" />

    <Button
        android:id="@+id/RejectPost"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/submitbutton"
        android:text="@string/decline_Post"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/ApprovePost"
        app:layout_constraintTop_toBottomOf="@+id/BusinessDetalisbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>